--- a/sync-rest/notification_service/Dockerfile
+++ b/sync-rest/notification_service/Dockerfile
@@ -1,6 +1,9 @@
 FROM python:3.11-slim
 WORKDIR /app
-COPY requirements.txt ./
+# common module (from repo root build context)
+COPY common ./common
+COPY sync-rest/notification_service/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
-COPY app.py ./
+COPY sync-rest/notification_service/app.py ./
+ENV PYTHONPATH=/app
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
